--- a/shop/package.json
+++ b/shop/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc --build",
-    "post:build":"copyfiles -F -e node_modules/** -e public/** **/*.sh **/*.json dist",
+    "build:post":"copyfiles -F -e 'node_modules/**' -e 'public/**' '**/*.sh' '**/*.json' dist",
     "dev": "nodemon --config nodemon.json index.ts",
     "dev:start": "ts-node index.ts",
     "log": "nodemon src/core/log.ts",
