fix: edit validation

--- a/core/plugin-market/meli-payamak-service-line-sms/config.json
+++ b/core/plugin-market/meli-payamak-service-line-sms/config.json
@@ -45,7 +45,7 @@
     },
     "active":{
         "dto" :"dto/config",
-        "run":"run"
+        "run":"active"
     },
     "edit":{
         "inputs": [
