--- a/core/package.json
+++ b/core/package.json
@@ -5,6 +5,7 @@
   "main": "index",
   "scripts": {
     "build": "tsc --build",
+    "build:post": "copyfiles -F -e 'node_modules/**' -e 'public/**' '**/*.sh' '**/*.json' dist",
     "dev": "nodemon --config nodemon.json start.ts",
     "log": "nodemon src/core/log.ts",
     "start": "node dist/start.js"
@@ -17,7 +18,7 @@
     "@nodeeweb/front-build": "^0.0.23",
     "@types/morgan": "^1.9.4",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -58,6 +59,7 @@
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/random-number-csprng": "^1.0.0",
+    "copyfiles": "^2.4.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
