--- a/shop/compose.yml
+++ b/shop/compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   shop:
-    image: nodeeweb-shop:dev-0.0.1
+    image: nodeeweb-shop:dev-1.0.0
     build:
       context: ..
       dockerfile: shop/Dockerfile
@@ -24,10 +24,10 @@ services:
     env_file:
       - .env.local
     volumes:
-      - /var/instances/nwi-shop/shared:/app/shop/shared/
-      - /var/instances/nwi-shop/logs:/app/shop/logs/
-      - /var/instances/nwi-shop/public:/app/shop/public/
-      - /var/instances/nwi-shop/plugins:/app/shop/plugins/
+      - /var/instances/nwi-shop/shared:/app/shared/
+      - /var/instances/nwi-shop/logs:/app/logs/
+      - /var/instances/nwi-shop/public:/app/public/
+      - /var/instances/nwi-shop/plugins:/app/plugins/
 
 networks:
   mongonet:
