fix: eslint syntax error

--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -16,6 +16,9 @@
   "rules": {
     "comma-dangle": "off",
     "@typescript-eslint/comma-dangle": "off",
-    "jsx-a11y/anchor-is-valid": "off"
-  }
-}
+    "jsx-a11y/anchor-is-valid": "off",
+    "babel/no-invalid-this": "error"
+  },
+  "parser": "babel/eslint-parser",
+  "plugins": ["babel"]
+ }
