--- a/front/package.json
+++ b/front/package.json
@@ -50,7 +50,9 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
+    "babel-eslint": "^10.1.0",
     "dotenv": "^16.0.1",
+    "eslint-plugin-babel": "^5.3.1",
     "ftp-deploy": "^2.4.2",
     "ssh2-sftp-client": "^9.1.0"
   },
