--- a/admin/package.json
+++ b/admin/package.json
@@ -18,28 +18,25 @@
     "publish": "./publish.sh"
   },
   "dependencies": {
-    "@date-io/date-fns-jalali": "^2.16.0",
+    "@date-io/date-fns-jalali": "^2.17.0",
     "@mui/styles": "^5.7.0",
     "@mui/x-data-grid": "^5.17.16",
     "@mui/x-date-pickers": "^5.0.10",
-    "@splidejs/react-splide": "^0.7.12",
-    "@splidejs/splide": "^4.1.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
-    "chart.js": "^3.7.1",
+    "chart.js": "^4.4.0",
     "date-fns-jalali": "^2.30.0-0",
     "final-form": "^4.20.10",
-    "framer-motion": "^10.16.1",
+    "framer-motion": "^10.16.4",
     "immutability-helper": "^3.1.1",
     "jalali-moment": "^3.3.11",
     "notiflix": "^3.2.6",
-    "ra-input-rich-text": "^4.13.1",
+    "ra-input-rich-text": "^4.14.1",
     "ra-language-farsi": "^4.1.0",
     "react": "^18.2.0",
-    "react-admin": "^4.13.1",
+    "react-admin": "^4.14.1",
     "react-admin-import-csv": "^4.0.1",
     "react-advance-jalaali-datepicker": "^1.4.0",
-    "react-chartjs-2": "^4.1.0",
     "react-color": "^2.19.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -48,12 +45,11 @@
     "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.4",
-    "recharts": "^2.7.3",
+    "recharts": "^2.8.0",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
-    "shards-react": "^1.0.3",
-    "swiper": "^8.3.2"
+    "shards-react": "^1.0.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
@@ -65,11 +61,11 @@
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "ftp-deploy": "^2.4.4",
+    "ftp-deploy": "^2.4.5",
     "prettier": "^2.8.8",
     "ssh2-sftp-client": "^9.1.0",
-    "typescript": "^5.1.6",
-    "webpack-bundle-analyzer": "^4.9.0"
+    "typescript": "^5.2.2",
+    "webpack-bundle-analyzer": "^4.9.1"
   },
   "browserslist": [
     ">0.2%",
