--- a/front/package.json
+++ b/front/package.json
@@ -41,6 +41,7 @@
     "redux-thunk": "^2.4.2",
     "shards-react": "^1.0.3",
     "socket.io-client": "^4.7.2",
+    "ssh2-sftp-client": "^9.1.0",
     "underscore": "^1.13.6",
     "use-offline-captcha": "^0.2.0"
   },
