--- a/front/.env.production
+++ b/front/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://shop.nodeeweb.com/api/v1
-REACT_APP_SERVER_URL=https://shop.nodeeweb.com
+REACT_APP_API_URL=https://v3.arvandguarantee.shop/api/v1
+REACT_APP_SERVER_URL=https://v3.arvandguarantee.shop
