--- a/front/package.json
+++ b/front/package.json
@@ -49,6 +49,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
     "@craco/types": "^7.1.0",
+    "ajv": "^7",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "dotenv": "^16.3.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
