--- a/core/package.json
+++ b/core/package.json
@@ -41,7 +41,9 @@
     "random-number-csprng": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.32.1",
-    "winston": "^3.9.0"
+    "sitemap": "^7.1.1",
+    "winston": "^3.9.0",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
