--- a/core/package.json
+++ b/core/package.json
@@ -8,7 +8,8 @@
     "build:post": "copyfiles -F -e 'node_modules/**' -e 'public/**' '**/*.sh' '**/*.json' dist",
     "dev": "nodemon --config nodemon.json start.ts",
     "log": "nodemon src/core/log.ts",
-    "start": "node dist/start.js"
+    "start": "node dist/start.js",
+    "publish": "npm publish --access public"
   },
   "author": "",
   "license": "ISC",
