--- a/.github/workflows/admin-deploy.yml
+++ b/.github/workflows/admin-deploy.yml
@@ -38,7 +38,7 @@ jobs:
         uses: githubocto/repo-visualizer@0.9.1
         with:
           excluded_paths: 'node_modules,build,.storybook,.github'
-          output_file: 'public/diagram.svg'
+          output_file: 'admin/diagram.svg'
           should_push: false
           root_path: 'admin/src/'
           artifact_name: 'diagram'
