--- a/.github/workflows/front-deploy.yml
+++ b/.github/workflows/front-deploy.yml
@@ -37,7 +37,7 @@ jobs:
         uses: githubocto/repo-visualizer@0.9.1
         with:
           excluded_paths: 'node_modules,build,.storybook,.github'
-          output_file: 'public/diagram.svg'
+          output_file: 'front/diagram.svg'
           should_push: false
           root_path: 'front/src/'
           artifact_name: 'diagram'
