--- a/.github/workflows/front-deploy.yml
+++ b/.github/workflows/front-deploy.yml
@@ -6,8 +6,9 @@ on:
       - main
       - 'releases/**'
       - dev
-    paths:
-      - 'front/**'
+      - ci/cd
+    # paths:
+    #   - 'front/**'
 
 jobs:
   build:
@@ -118,8 +119,12 @@ jobs:
         id: setup_metadata
         run: |
           if [ $GITHUB_REF_NAME == 'main' ] || [[ $GITHUB_REF_NAME == release/* ]]
-          then echo "TARGET_PATH=/var/instances/nwi-shop/public/front/" >> $GITHUB_OUTPUT
-          else echo "TARGET_PATH=/var/instances/nwi-shop-dev/public/front/" >> $GITHUB_OUTPUT
+          then 
+            echo "TARGET_PATH=/var/instances/nwi-shop/public/front/" >> $GITHUB_OUTPUT
+            echo "IS_PRO=true" >> $GITHUB_OUTPUT
+          else 
+            echo "TARGET_PATH=/var/instances/nwi-shop-dev/public/front/" >> $GITHUB_OUTPUT
+            echo "IS_PRO=false" >> $GITHUB_OUTPUT
           fi
         shell: bash
 
@@ -135,6 +140,7 @@ jobs:
 
       - name: 'FTP to iran server'
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        if: ${{steps.setup_metadata.outputs.IS_PRO == 'true'}}
         with:
           server: ${{secrets.IRAN_HOST}}
           username: ${{secrets.IRAN_FTP_USER}}
