before test shop

--- a/.github/workflows/front-deploy.yml
+++ b/.github/workflows/front-deploy.yml
@@ -6,9 +6,8 @@ on:
       - main
       - 'releases/**'
       - dev
-      - ci/cd
-    # paths:
-    #   - 'front/**'
+    paths:
+      - 'front/**'
 
 jobs:
   build:
