--- a/.github/workflows/admin-deploy.yml
+++ b/.github/workflows/admin-deploy.yml
@@ -152,30 +152,32 @@ jobs:
           script: |
             echo $USER_PASS | sudo -S chmod -R 755 $TARGET_PATH
 
-      - name: 'FTP to iran server'
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-        if: ${{steps.setup_metadata.outputs.IS_PRO == 'true'}}
-        with:
-          server: ${{secrets.IRAN_HOST}}
-          username: ${{secrets.IRAN_FTP_USER}}
-          password: ${{secrets.IRAN_FTP_PASS}}
-          local-dir: 'build/'
-          server-dir: ${{steps.setup_metadata.outputs.TARGET_PATH}}
-          timeout: 600000
+      # - name: 'FTP to iran server'
+      # uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      # if: ${{steps.setup_metadata.outputs.IS_PRO == 'true'}}
+      # with:
+      #   server: ${{secrets.IRAN_HOST}}
+      #   username: ${{secrets.IRAN_FTP_USER}}
+      #   password: ${{secrets.IRAN_FTP_PASS}}
+      #   local-dir: 'build/'
+      #   server-dir: ${{steps.setup_metadata.outputs.TARGET_PATH}}
+      #   timeout: 600000
 
-      - name: 'Chmod on iran server'
+      - name: 'SSH on iran server'
         uses: appleboy/ssh-action@v1.0.0
         env:
           TARGET_PATH: ${{steps.setup_metadata.outputs.TARGET_PATH}}
           USER_PASS: ${{secrets.IRAN_FTP_PASS}}
+          RUN_ID: ${{github.run_id}}
+          REPO_NAME: ${{github.repository}}
+          ARTIFACT_NAME: build
         with:
           host: ${{secrets.IRAN_HOST}}
           username: ${{secrets.IRAN_FTP_USER}}
           password: ${{secrets.IRAN_FTP_PASS}}
-          envs: TARGET_PATH,USER_PASS
+          envs: TARGET_PATH,USER_PASS,RUN_ID,REPO_NAME,ACTIONS_RUNTIME_TOKEN,ACTIONS_RUNTIME_URL,GITHUB_RUN_ID,OUTPUT_PATH,ARTIFACT_NAME
           script_stop: true
-          script: |
-            echo $USER_PASS | sudo -S chmod -R 755 $TARGET_PATH
+          script: /download-artifact.sh
 
   cleanup:
     name: Cleanup actions
