--- a/.github/workflows/admin-deploy.yml
+++ b/.github/workflows/admin-deploy.yml
@@ -6,8 +6,23 @@ on:
       - main
       - 'releases/**'
       - dev
-    paths:
-      - 'admin/**'
+      - ci/cd
+    # paths:
+    #   - 'admin/**'
+  workflow_dispatch:
+    inputs:
+      target:
+        description: 'which target you want to deploy?'
+        required: true
+        default: 'dev.shop'
+        type: choice
+        options:
+          - shop
+          - dev.shop
+          - nodeeweb.com
+          - dev.nodeeweb.com
+          - nodeeweb.ir
+          - dev.nodeeweb.ir
 
 jobs:
   build:
@@ -117,19 +132,74 @@ jobs:
 
       - name: 'Setup metadata'
         id: setup_metadata
+        env:
+          INPUT_MAN: ${{inputs.target}}
         run: |
+          input=${INPUT_MAN:-''}
+
+          if [ $input == 'shop' ]
+          then
+            echo "TARGET_PATH=/var/instances/nwi-shop/public/admin/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'dev.shop' ]
+          then
+            echo "TARGET_PATH=/var/instances/nwi-dev-shop/public/admin/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'nodeeweb.com' ]
+          then
+            echo "TARGET_PATH=/var/nodeeweb/public/admin/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'dev.nodeeweb.com' ]
+          then
+            echo "TARGET_PATH=/var/instances/nwi-dev/public/admin/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'nodeeweb.ir' ]
+          then
+            echo "TARGET_PATH=/var/nodeeweb/public/admin/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=false" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'dev.nodeeweb.ir' ]
+          then
+            echo "TARGET_PATH=/var/instances/nwi-dev/public/admin/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=false" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
           if [ $GITHUB_REF_NAME == 'main' ] || [[ $GITHUB_REF_NAME == release/* ]]
           then 
             echo "TARGET_PATH=/var/instances/nwi-shop/public/admin/" >> $GITHUB_OUTPUT
-            echo "IS_PRO=true" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
           else 
-            echo "TARGET_PATH=/var/instances/nwi-shop-dev/public/admin/" >> $GITHUB_OUTPUT
-            echo "IS_PRO=false" >> $GITHUB_OUTPUT
+            echo "TARGET_PATH=/var/instances/nwi-dev-shop/public/admin/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=false" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=true" >> $GITHUB_OUTPUT
           fi
         shell: bash
 
       - name: 'FTP to german server'
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        if: ${{steps.setup_metadata.outputs.IN_GERMAN == 'true'}}
         with:
           server: ${{secrets.GERMAN_HOST}}
           username: ${{secrets.GERMAN_FTP_USER}}
@@ -140,6 +210,7 @@ jobs:
 
       - name: 'Chmod on german server'
         uses: appleboy/ssh-action@v1.0.0
+        if: ${{steps.setup_metadata.outputs.IN_GERMAN == 'true'}}
         env:
           TARGET_PATH: ${{steps.setup_metadata.outputs.TARGET_PATH}}
           USER_PASS: ${{secrets.GERMAN_FTP_PASS}}
@@ -152,19 +223,9 @@ jobs:
           script: |
             echo $USER_PASS | sudo -S chmod -R 755 $TARGET_PATH
 
-      # - name: 'FTP to iran server'
-      # uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      # if: ${{steps.setup_metadata.outputs.IS_PRO == 'true'}}
-      # with:
-      #   server: ${{secrets.IRAN_HOST}}
-      #   username: ${{secrets.IRAN_FTP_USER}}
-      #   password: ${{secrets.IRAN_FTP_PASS}}
-      #   local-dir: 'build/'
-      #   server-dir: ${{steps.setup_metadata.outputs.TARGET_PATH}}
-      #   timeout: 600000
-
       - name: 'SSH on iran server'
         uses: appleboy/ssh-action@v1.0.0
+        if: ${{steps.setup_metadata.outputs.IN_IRAN == 'true'}}
         env:
           TARGET_PATH: ${{steps.setup_metadata.outputs.TARGET_PATH}}
           USER_PASS: ${{secrets.IRAN_FTP_PASS}}
