--- a/.github/workflows/front-deploy.yml
+++ b/.github/workflows/front-deploy.yml
@@ -8,6 +8,24 @@ on:
       - dev
     paths:
       - 'front/**'
+  workflow_dispatch:
+    inputs:
+      target:
+        description: 'which target you want to deploy?'
+        required: false
+        type: choice
+        options:
+          - shop
+          - dev.shop
+          - nodeeweb.com
+          - dev.nodeeweb.com
+          - nodeeweb.ir
+          - dev.nodeeweb.ir
+      publish_npm:
+        description: 'publish on npm'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   build:
@@ -28,6 +46,23 @@ jobs:
       - name: Setup node-gyp
         run: yarn global add node-gyp
 
+      - name: 'Setup metadata'
+        id: 'metadata'
+        env:
+          INPUT_MAN: ${{inputs.publish_npm}}
+        run: |
+          input=${INPUT_MAN:-'null'}
+          if [ $input == 'false' ] 
+          then
+            echo 'IS_PRO=false' >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $GITHUB_REF_NAME == 'main' ] || [[ $GITHUB_REF_NAME == release/* ]] || [ $input == 'true' ]
+          then echo 'IS_PRO=true' >> $GITHUB_OUTPUT
+          else echo 'IS_PRO=false' >> $GITHUB_OUTPUT
+          fi
+
       - name: 'Install dependencies'
         working-directory: front
         run: yarn
@@ -47,7 +82,7 @@ jobs:
         working-directory: front
         env:
           CI: 'false'
-          GENERATE_SOURCEMAP: 'false'
+          GENERATE_SOURCEMAP: ${{steps.metadata.outputs.IS_PRO != 'true' }}
 
       - name: 'Upload build artifact'
         uses: actions/upload-artifact@v3
@@ -63,36 +98,39 @@ jobs:
       - name: 'Checkout to repository'
         uses: actions/checkout@v4
 
-      - name: 'Check Branch'
-        id: 'check_branch'
+      - name: 'Setup metadata'
+        id: 'metadata'
+        env:
+          INPUT_MAN: ${{inputs.publish_npm}}
         run: |
-          if [ $GITHUB_REF_NAME == 'main' ] || [[ $GITHUB_REF_NAME == release/* ]]
+          input=${INPUT_MAN:-'null'}
+          if [ $input == 'false' ] 
+          then
+            echo 'IS_PRO=false' >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $GITHUB_REF_NAME == 'main' ] || [[ $GITHUB_REF_NAME == release/* ]] || [ $input == 'true' ]
           then echo 'IS_PRO=true' >> $GITHUB_OUTPUT
           else echo 'IS_PRO=false' >> $GITHUB_OUTPUT
           fi
+
       - name: 'Setup nodeJs'
         uses: actions/setup-node@v3
-        if: ${{steps.check_branch.outputs.IS_PRO == 'true' }}
+        if: ${{steps.metadata.outputs.IS_PRO == 'true' }}
         with:
           node-version: 18
 
       - name: 'Download build artifacts'
         uses: actions/download-artifact@v3
-        if: ${{steps.check_branch.outputs.IS_PRO == 'true' }}
+        if: ${{steps.metadata.outputs.IS_PRO == 'true' }}
         with:
           name: build
           path: front/build
 
-      - name: 'Download diagram artifacts'
-        uses: actions/download-artifact@v3
-        if: ${{steps.check_branch.outputs.IS_PRO == 'true' }}
-        with:
-          name: diagram
-          path: front/build
-
       - name: 'Publish'
         working-directory: front
-        if: ${{steps.check_branch.outputs.IS_PRO == 'true' }}
+        if: ${{steps.metadata.outputs.IS_PRO == 'true' }}
         run: npm run publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
@@ -116,19 +154,75 @@ jobs:
 
       - name: 'Setup metadata'
         id: setup_metadata
+        env:
+          INPUT_MAN: ${{inputs.target}}
+        continue-on-error: false
         run: |
+          input=${INPUT_MAN:-'null'}
+
+          if [ $input == 'shop' ]
+          then
+            echo "TARGET_PATH=/var/instances/nwi-shop/public/front/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'dev.shop' ]
+          then
+            echo "TARGET_PATH=/var/instances/nwi-dev-shop/public/front/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'nodeeweb.com' ]
+          then
+            echo "TARGET_PATH=/var/nodeeweb/public/front/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'dev.nodeeweb.com' ]
+          then
+            echo "TARGET_PATH=/var/instances/nwi-dev/public/front/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'nodeeweb.ir' ]
+          then
+            echo "TARGET_PATH=/var/nodeeweb/public/front/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=false" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          if [ $input == 'dev.nodeeweb.ir' ]
+          then
+            echo "TARGET_PATH=/var/instances/nwi-dev/public/front/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=false" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
           if [ $GITHUB_REF_NAME == 'main' ] || [[ $GITHUB_REF_NAME == release/* ]]
           then 
             echo "TARGET_PATH=/var/instances/nwi-shop/public/front/" >> $GITHUB_OUTPUT
-            echo "IS_PRO=true" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
           else 
-            echo "TARGET_PATH=/var/instances/nwi-shop-dev/public/front/" >> $GITHUB_OUTPUT
-            echo "IS_PRO=false" >> $GITHUB_OUTPUT
+            echo "TARGET_PATH=/var/instances/nwi-dev-shop/public/front/" >> $GITHUB_OUTPUT
+            echo "IN_GERMAN=true" >> $GITHUB_OUTPUT  
+            echo "IN_IRAN=false" >> $GITHUB_OUTPUT
           fi
         shell: bash
 
       - name: 'FTP to german server'
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        if: ${{steps.setup_metadata.outputs.IN_GERMAN == 'true'}}
         with:
           server: ${{secrets.GERMAN_HOST}}
           username: ${{secrets.GERMAN_FTP_USER}}
@@ -139,6 +233,7 @@ jobs:
 
       - name: 'Chmod on german server'
         uses: appleboy/ssh-action@v1.0.0
+        if: ${{steps.setup_metadata.outputs.IN_GERMAN == 'true'}}
         env:
           TARGET_PATH: ${{steps.setup_metadata.outputs.TARGET_PATH}}
           USER_PASS: ${{secrets.GERMAN_FTP_PASS}}
@@ -151,19 +246,9 @@ jobs:
           script: |
             echo $USER_PASS | sudo -S chmod -R 755 $TARGET_PATH
 
-      # - name: 'FTP to iran server'
-      #   uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      #   if: ${{steps.setup_metadata.outputs.IS_PRO == 'true'}}
-      #   with:
-      #     server: ${{secrets.IRAN_HOST}}
-      #     username: ${{secrets.IRAN_FTP_USER}}
-      #     password: ${{secrets.IRAN_FTP_PASS}}
-      #     local-dir: 'build/'
-      #     server-dir: ${{steps.setup_metadata.outputs.TARGET_PATH}}
-      #     timeout: 600000
-
       - name: 'SSH on iran server'
         uses: appleboy/ssh-action@v1.0.0
+        if: ${{steps.setup_metadata.outputs.IN_IRAN == 'true'}}
         env:
           TARGET_PATH: ${{steps.setup_metadata.outputs.TARGET_PATH}}
           USER_PASS: ${{secrets.IRAN_FTP_PASS}}
